--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Tools Grid -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Image Compressor -->
-           <a href="/tools/image-tool.html" target="_blank" class="tool-card bg-white p-6 rounded-lg shadow-md text-center hover:no-underline">
+           <a href="/tools/image-tool.html" class="tool-card bg-white p-6 rounded-lg shadow-md text-center hover:no-underline">
     <div class="text-4xl mb-4">🖼️</div>
     <h3 class="text-xl font-semibold mb-2">Image Compressor</h3>
     <p class="text-gray-600">Compress and optimize your images for the web.</p>
