--- a/image-tool.html
+++ b/image-tool.html
@@ -11,32 +11,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR_ADSENSE_AD_UNIT_ID" crossorigin="anonymous"></script>
-    <!-- Custom Styles -->
-    <style>
-        /* Custom gradient for the header */
-        .gradient-header {
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-        }
-        /* Custom gradient for the button */
-        .gradient-button {
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-            transition: background 0.3s ease;
-        }
-        .gradient-button:hover {
-            background: linear-gradient(135deg, #fad0c4, #ff9a9e);
-        }
-        /* Custom gradient for the footer */
-        .gradient-footer {
-            background: linear-gradient(135deg, #2575fc, #6a11cb);
-        }
-    </style>
 </head>
-<body class="bg-gradient-to-r from-purple-50 to-blue-50">
+<body class="bg-gray-100">
     <!-- Header -->
-    <header class="gradient-header text-white py-8 shadow-lg">
+    <header class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 shadow-lg">
         <div class="container mx-auto text-center">
-            <h1 class="text-4xl font-bold">🎨 Image Compressor</h1>
-            <p class="mt-2 text-lg">Optimize your images with vibrant colors!</p>
+            <h1 class="text-4xl font-bold">Online Image Compression Tool</h1>
+            <p class="mt-2 text-lg">Optimize your images for the web with ease</p>
         </div>
     </header>
 
@@ -61,33 +42,33 @@
                 <!-- File Input -->
                 <div class="mb-6">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="image-input">
-                        📁 Upload Image
+                        Upload Image
                     </label>
-                    <input type="file" id="image-input" accept="image/*" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-purple-500">
+                    <input type="file" id="image-input" accept="image/*" class="w-full p-2 border border-gray-300 rounded-lg">
                 </div>
 
                 <!-- Compression Level -->
                 <div class="mb-6">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="compression-level">
-                        🎚️ Compression Level: <span id="compression-value">0.5</span>
+                        Compression Level: <span id="compression-value">0.5</span>
                     </label>
-                    <input type="range" id="compression-level" min="0" max="1" step="0.1" value="0.5" class="w-full range range-purple">
+                    <input type="range" id="compression-level" min="0" max="1" step="0.1" value="0.5" class="w-full">
                 </div>
 
                 <!-- Compress Button -->
-                <button id="compress-btn" class="w-full gradient-button text-white py-3 px-6 rounded-lg font-bold text-lg hover:shadow-lg transition duration-300">
-                    🚀 Compress Image
+                <button id="compress-btn" class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300">
+                    Compress Image
                 </button>
 
                 <!-- Image Display -->
                 <div id="image-container" class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="text-center">
-                        <h3 class="text-lg font-semibold mb-2">🖼️ Original Image</h3>
-                        <img id="original-image" src="#" alt="Original Image" class="w-full h-auto rounded-lg shadow-md border-2 border-purple-200">
+                        <h3 class="text-lg font-semibold mb-2">Original Image</h3>
+                        <img id="original-image" src="#" alt="Original Image" class="w-full h-auto rounded-lg shadow-md">
                     </div>
                     <div class="text-center">
-                        <h3 class="text-lg font-semibold mb-2">✨ Compressed Image</h3>
-                        <img id="compressed-image" src="#" alt="Compressed Image" class="w-full h-auto rounded-lg shadow-md border-2 border-blue-200">
+                        <h3 class="text-lg font-semibold mb-2">Compressed Image</h3>
+                        <img id="compressed-image" src="#" alt="Compressed Image" class="w-full h-auto rounded-lg shadow-md">
                     </div>
                 </div>
             </div>
@@ -108,7 +89,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="gradient-footer text-white py-4 mt-8">
+    <footer class="bg-gray-800 text-white py-4 mt-8">
         <div class="container mx-auto text-center">
             <p>&copy; 2023 Online Image Compression Tool. All rights reserved.</p>
         </div>
