--- a/aitool.html
+++ b/aitool.html
@@ -8,33 +8,50 @@
     <meta name="author" content="Your Name">
     <title>AI Image Generator</title>
     <style>
-        /* CSS Styles */
-        body {
-            font-family: Arial, sans-serif;
+        /* CSS Reset */
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            box-sizing: border-box;
+        }
+
+        /* Global Styles */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f8f9fa;
             color: #333;
+            line-height: 1.6;
         }
 
         header {
-            background-color: #333;
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
             color: #fff;
-            padding: 20px;
+            padding: 40px 20px;
             text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            opacity: 0.9;
         }
 
         main {
             padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
         }
 
         #image-generator {
-            background-color: #fff;
+            background: #fff;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-            margin: 0 auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         #input-section {
@@ -43,27 +60,35 @@
 
         #prompt {
             width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            padding: 15px;
+            font-size: 1rem;
+            border: 2px solid #e0e0e0;
+            border-radius: 8px;
             resize: vertical;
-            min-height: 100px;
+            min-height: 120px;
+            transition: border-color 0.3s ease;
+        }
+
+        #prompt:focus {
+            border-color: #2575fc;
+            outline: none;
         }
 
         #generate-btn, #regenerate-btn {
-            background-color: #007bff;
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
             color: #fff;
             border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 4px;
+            padding: 12px 24px;
+            font-size: 1rem;
+            border-radius: 8px;
             cursor: pointer;
             margin-top: 10px;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
         #generate-btn:hover, #regenerate-btn:hover {
-            background-color: #0056b3;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
         #output-section {
@@ -78,37 +103,80 @@
         #generated-image {
             max-width: 100%;
             height: auto;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        #generated-image:hover {
+            transform: scale(1.02);
         }
 
         #download-options {
             margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
         }
 
         #download-options button {
-            background-color: #28a745;
+            background: #28a745;
             color: #fff;
             border: none;
             padding: 10px 20px;
-            font-size: 14px;
-            border-radius: 4px;
+            font-size: 0.9rem;
+            border-radius: 8px;
             cursor: pointer;
-            margin: 5px;
+            transition: background 0.3s ease, transform 0.2s ease;
         }
 
         #download-options button:hover {
-            background-color: #218838;
+            background: #218838;
+            transform: translateY(-2px);
         }
 
         footer {
-            background-color: #333;
+            background: #333;
             color: #fff;
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             position: fixed;
             width: 100%;
             bottom: 0;
+        }
+
+        .loading {
+            display: none;
+            font-size: 1.1rem;
+            color: #2575fc;
+            margin-top: 20px;
+        }
+
+        .error {
+            color: #dc3545;
+            margin-top: 20px;
+            font-size: 1rem;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            #generate-btn, #regenerate-btn {
+                width: 100%;
+                padding: 15px;
+            }
+
+            #download-options button {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -123,6 +191,8 @@
             <div id="input-section">
                 <textarea id="prompt" placeholder="Enter a prompt for the image (e.g., 'A futuristic cityscape')"></textarea>
                 <button id="generate-btn">Generate Image</button>
+                <div class="loading" id="loading">Generating image... Please wait.</div>
+                <div class="error" id="error"></div>
             </div>
 
             <div id="output-section">
@@ -155,6 +225,8 @@
         const downloadPngBtn = document.getElementById('download-png');
         const downloadJpgBtn = document.getElementById('download-jpg');
         const downloadWebpBtn = document.getElementById('download-webp');
+        const loading = document.getElementById('loading');
+        const error = document.getElementById('error');
 
         let currentImageUrl = '';
 
@@ -162,9 +234,13 @@
         async function generateImage() {
             const prompt = promptInput.value.trim();
             if (!prompt) {
-                alert('Please enter a prompt.');
+                error.textContent = 'Please enter a prompt.';
                 return;
             }
+
+            // Show loading message
+            loading.style.display = 'block';
+            error.textContent = '';
 
             try {
                 const response = await fetch(API_URL, {
@@ -176,16 +252,24 @@
                     body: JSON.stringify({ prompt })
                 });
 
+                if (!response.ok) {
+                    throw new Error(`API request failed with status ${response.status}`);
+                }
+
                 const data = await response.json();
                 if (data.imageUrl) {
                     currentImageUrl = data.imageUrl;
                     imageContainer.src = currentImageUrl;
+                    error.textContent = '';
                 } else {
-                    throw new Error('Failed to generate image.');
+                    throw new Error('Failed to generate image. No image URL returned.');
                 }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('Failed to generate image. Please try again.');
+            } catch (err) {
+                console.error('Error:', err);
+                error.textContent = 'Failed to generate image. Please try again.';
+            } finally {
+                // Hide loading message
+                loading.style.display = 'none';
             }
         }
 
@@ -195,7 +279,7 @@
         // Download image in different formats
         function downloadImage(format) {
             if (!currentImageUrl) {
-                alert('No image to download.');
+                error.textContent = 'No image to download.';
                 return;
             }
 
