--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
 
             <!-- Image Resizer -->
-            <a href="/tools/aitool" class="tool-card bg-white p-6 rounded-lg shadow-md text-center hover:no-underline">
+            <a href="/tools/agecalculator" class="tool-card bg-white p-6 rounded-lg shadow-md text-center hover:no-underline">
                 <div class="text-4xl mb-4">📏</div>
                 <h3 class="text-xl font-semibold mb-2">Image Resizer</h3>
                 <p class="text-gray-600">Resize images to your desired dimensions.</p>
