--- a/agecalculator.html
+++ b/agecalculator.html
@@ -170,7 +170,7 @@
 <body>
     <header>
         <h1>
-            <img src="https://via.placeholder.com/50" alt="Logo"> <!-- Replace with your logo URL -->
+            <img src="calculator.png" alt="Logo"> <!-- Replace with your logo URL -->
             Age Calculator
         </h1>
         <p>Calculate your age easily with our Age Calculator tool. Enter your date of birth and get your exact age in years, months, and days.</p>
